dnl Process this file with autoconf to produce a configure script.

AC_INIT(rblpolicyd.c)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(rblpolicyd, 0.1.0)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h string.h memory.h fcntl.h limits.h stdarg.h)


AC_HEADER_MAJOR

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(snprintf vsnprintf)

AC_OUTPUT(Makefile rblpolicyd.lsm rblpolicyd.spec)
